--- a/training/ForestsAndFire.qmd
+++ b/training/ForestsAndFire.qmd
@@ -6,9 +6,9 @@ editor_options:
 execute:
   eval: false
   tidy: false
-  warning: false
-  message: false
-  error: false
+  warning: true
+  message: true
+  error: true
   cache: true
 ---
 
@@ -54,9 +54,31 @@ googledrive::drive_auth(path = Sys.getenv("GOOGLE_APP_CREDENTIALS"))
 qmdPath <- normalizePath(getwd(), winslash = "/")
 
 if (!interactive()) {
-dir.create("~/SpaDES_book/scfm_example_fresh", recursive = TRUE)
-knitr::opts_knit$set(root.dir = "~/SpaDES_book/scfm_example_fresh")
+dir.create("~/SpaDES_book/Wildfire_demo", recursive = TRUE)
+knitr::opts_knit$set(root.dir = "~/SpaDES_book/Wildfire_demo")
 }
+# This needs to be done because the "automated" run needs googledrive::drive::auth() run
+#   before it is in 
+packagePath <- file.path("packages", gsub(".[[:digit:]]{1,3}$", "", getRversion()))
+dir.create(packagePath, showWarnings = FALSE, recursive = TRUE)
+.libPaths(packagePath)
+
+```
+
+```{google drive}
+#| include: false
+#| eval: true
+#| cache: false
+#| purl: false
+out1 <- SpaDES.project::setupProject(package = c("googledrive", "httr"),
+                                     paths = list("packagePath" = packagePath),
+                                     projectPath = "~/SpaDES_book/LandRDemo_coreVeg",
+                                     verbose = -2)
+if (!googledrive::drive_has_token() && !interactive()) {
+  options(gargle_oauth_email = "ianmseddy@gmail.com",
+          gargle_oauth_cache = "C:/users/ieddy/SpaDES_book/googledrive_auth_cache/")
+}
+
 ```
 
 We have developed an R version of LANDIS-II's Biomass Succession
@@ -77,48 +99,46 @@ available" versions:
 **Time to run this** is between 1 and 2 hours.
 
 ```{r scfm}
-repos <- unique(c("predictiveecology.r-universe.dev", getOption("repos")))
-options(repos = repos)
-
-# Require::Require(c("SpaDES.project (HEAD)"))
-Require::Require(c("PredictiveEcology/SpaDES.project@development (HEAD)")) 
-# pkgload::load_all("~/GitHub/SpaDES.project")
+# This repository is ours and it has the latest versions of our packages
+repos <- c("predictiveecology.r-universe.dev", getOption("repos"))
+# Need the latest version
+if (tryCatch(packageVersion("SpaDES.project") < "0.1.1", error = function(x) TRUE))
+  install.packages(c("SpaDES.project", "Require"), repos = repos)
+# 
 
 out <- SpaDES.project::setupProject(
-  updateRprofile = TRUE,
-  useGit = FALSE,
-  paths = list(projectPath = "~/SpaDES_book"),
-  modules = c("PredictiveEcology/Biomass_borealDataPrep@development",
-              "PredictiveEcology/Biomass_core@development",
-              "PredictiveEcology/Biomass_regeneration@development",
+  Restart = TRUE,
+  updateRprofile = FALSE,
+  paths = list(projectPath = "~/SpaDES_book/Wildfire_demo"),
+  modules = c("PredictiveEcology/Biomass_borealDataPrep@main",
+              "PredictiveEcology/Biomass_core@main",
+              "PredictiveEcology/Biomass_regeneration@main",
               file.path("PredictiveEcology/scfm@development/modules",
                         c("scfmLandcoverInit", "scfmRegime", "scfmDriver",
                           "scfmIgnition", "scfmEscape", "scfmSpread",
                           "scfmDiagnostics"))
+              #note scfm is a series of modules on a single git repository
   ),
   params = list(
-    .globals = list(.studyAreaName = "scfm_example",
-                    dataYear = 2011, #will get kNN 2011 data, and NTEMS 2011 landcover
-                    sppEquivCol = "LandR",
-                    .plots = "png",
-                    .useCache = c(".inputObjects", "init")
-                 ),
+    .globals = list(
+      dataYear = 2011, #will get kNN 2011 data, and NTEMS 2011 landcover
+      sppEquivCol = "LandR",
+      .plots = c("png"),
+      .useCache = c(".inputObjects", "init")
+    ),
     scfmDriver = list(targetN = 1000, #default is 4000 - higher targetN adds time + precision
                       # targetN would ideally be minimum 2000 - mean fire size estimates will be bad with 1000
                       .useParallelFireRegimePolys = TRUE) #assumes parallelization is an otpion
     
   ),
   options = list(#spades.allowInitDuringSimInit = TRUE,
-                 spades.allowSequentialCaching = TRUE,
-                 spades.moduleCodeChecks = FALSE,
-                 #                reproducible.shapefileRead = "terra::vect",
-                 spades.recoveryMode = 1
+    spades.allowSequentialCaching = TRUE,
+    spades.moduleCodeChecks = FALSE,
+    spades.recoveryMode = 1
   ),
-  packages = c('RCurl', 'XML', 'snow'), # need for some downloading; if omitted, a message tells user
-  times = list(start = 2011, end = 2061),
-  sppEquiv = LandR::sppEquivalencies_CA[KNN %in% c("Popu_Tre", "Betu_Pap",
-                                                   "Pice_Gla", "Pice_Mar",
-                                                   "Pinu_Con", "Pinu_Ban")],
+  packages = c('RCurl', 'XML', 'snow'),
+  times = list(start = 2011, end = 2081),
+  #70 years of fire should be enough to evaluate MAAB
   studyArea = {
     targetCRS <- paste("+proj=lcc +lat_1=49 +lat_2=77 +lat_0=0 +lon_0=-95 +x_0=0 +y_0=0",
                        "+datum=NAD83 +units=m +no_defs +ellps=GRS80 +towgs84=0,0,0")
@@ -127,7 +147,7 @@ out <- SpaDES.project::setupProject(
     sa <- sf::st_as_sf(sa)
   },
   studyAreaLarge = {
-    sf::st_buffer(studyArea, 20000)
+    sf::st_buffer(studyArea, 5000)
   },
   rasterToMatchLarge = {
     rtml<- terra::rast(terra::ext(studyAreaLarge), res = c(250, 250))
@@ -138,14 +158,17 @@ out <- SpaDES.project::setupProject(
   rasterToMatch = {
     rtm <- terra::crop(rasterToMatchLarge, studyArea)
     rtm <- terra::mask(rtm, studyArea)
-  }
+  },
+  sppEquiv = {
+    speciesInStudy <- LandR::speciesInStudyArea(studyAreaLarge)
+    species <- LandR::equivalentName(speciesInStudy$speciesList, df = LandR::sppEquivalencies_CA, "LandR")
+    sppEquiv <- LandR::sppEquivalencies_CA[LandR %in% species]
+    sppEquiv <- sppEquiv[KNN != "" & LANDIS_traits != ""] #avoid a bug with shore pine
+  } 
 )
 
+outSim <- do.call(SpaDES.core::simInitAndSpades, out)
 
-#this must be done outside of setupProject (temporarily)
-#alternatively
-outSim <- do.call(SpaDES.core::simInitAndSpades, out) |>
-  reproducible::Cache()
 ```
 
 ## Examining things
