--- a/workshops/Nov-2024-SpaDES-workshop.qmd
+++ b/workshops/Nov-2024-SpaDES-workshop.qmd
@@ -50,27 +50,27 @@ Presentation slides will be added at the end of each day.
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 | 10:00 - 10:30           | [Introduction to SpaDES modules](https://predictiveecology.org/training/_book/NewModuleIntro.html)                       |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
-| 10:30 - 11:00           | WOYO                                                                                                                     |
+| 10:30 - 11:00           | WOYO and Break                                                                                                           |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 | 11:00 - 11:30           | [Module files and metadata](https://predictiveecology.org/training/_book/MetaDataAndModuleFiles.html)                    |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 |                         | [Download presentation](Presentations/2024-06-11/ModuleFilesMetadata_Inputs.pdf)                                         |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
-| 11:30 - 12:30           | WOYO                                                                                                                     |
+| 11:30 - 12:00           | WOYO and Discussion                                                                                                      |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
-| 12:30 - 1:30            | LUNCH BREAK                                                                                                              |
+| 12:00 - 1:30            | LUNCH BREAK                                                                                                              |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 | 1:30 - 2:00             | [Module inputs](https://predictiveecology.org/training/_book/ModuleInputs.html)                                          |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 |                         | [Download presentation](Presentations/2024-06-11/ModuleFilesMetadata_Inputs.pdf)                                         |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
-| 2:00 - 3:00             | WOYO                                                                                                                     |
+| 2:00 - 3:00             | WOYO and Discussion                                                                                                      |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 | 3:00 - 3:30             | [The `simList`](https://predictiveecology.org/training/_book/simList.html)                                               |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 |                         | [Download presentation](Presentations/2024-06-11/simList.pdf)                                                            |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
-| 3:30 - free ending\     | WOYO                                                                                                                     |
+| 3:30 - 4:30             | WOYO and Discussion                                                                                                      |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 | **DAY 2**               | **Continuous workflows with simple examples**                                                                            |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
@@ -82,7 +82,7 @@ Presentation slides will be added at the end of each day.
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 |                         | [Download presentation](Presentations/2024-06-11/ModsEventsScheduling.pdf)                                               |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
-| 10:00 - 11:00           | WOYO                                                                                                                     |
+| 10:00 - 11:00           | WOYO Discussion and Break                                                                                                |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 | 11:00 - 11:30           | [Continuous workflows](https://predictiveecology.org/training/_book/ContinuousWorkflows.html)                            |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
@@ -90,15 +90,15 @@ Presentation slides will be added at the end of each day.
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 |                         | [Download presentation](Presentations/2024-06-11/ContinuousWFsCaching.pdf)                                               |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
-| 11:30 - 12:30           | WOYO                                                                                                                     |
+| 11:30 - 12:00           | WOYO and Discussion                                                                                                      |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
-| 12:30 - 1:30            | LUNCH BREAK                                                                                                              |
+| 12:00 - 1:30            | LUNCH BREAK                                                                                                              |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 | 1:30 - 2:00             | [`prepInputs()`](https://predictiveecology.org/training/_book/prepInputs.html)                                           |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 |                         | [Download presentation](Presentations/2024-06-11/prepInputs.pdf)                                                         |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
-| 2:00 - 3:00             | WOYO                                                                                                                     |
+| 2:00 - 3:00             | WOYO and Discussion and Break                                                                                            |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 | 3:00 - 3:30             | [SpaDES workflows and projects with `setupProject`](https://predictiveecology.org/training/_book/setupProject.html)      |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
@@ -106,35 +106,34 @@ Presentation slides will be added at the end of each day.
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 |                         | [Download presentation](Presentations/2024-06-11/setupProject.pdf)                                                       |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
-| 3:30 - 4:00             |                                                                                                                          |
+| 3:30 - 4:30             | WOYO and Discussion                                                                                                      |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 | **DAY 3**               | **Using continuous workflows with real challenges**                                                                      |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
-| 9:00 - 9:30             | Revisit previous WOYO and Day 2                                                                                          |
+| 9:00 - 9:30             | Flexibility comes at a cost, but it's worth it!                                                                          |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
-| 9:30 - 10:00            | Flexibility comes at a cost, but it's worth it!                                                                          |
-+-------------------------+--------------------------------------------------------------------------------------------------------------------------+
-|                         | [Download presentation](Presentations/2024-06-11/costOfFlexibility.pdf)                                                  |
+| 9:30 - 10:00            | [Download presentation](Presentations/2024-06-11/costOfFlexibility.pdf)                                                  |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 | 10:00 - 10:30           | [Forest landscape modelling - parameterisation,                                                                          |
 |                         | simulation/prediction](https://predictiveecology.org/training/_book/LandRDemo_coreVeg.html)                              |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
-| 10:30 - 11:00           | WOYO                                                                                                                     |
+| 10:30 - 11:00           | WOYO and Discussion and Break                                                                                            |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
-| 11:00 - 11:30           | [Forest landscape modelling - turn plotting on, extend the simulation,                                                   |
-|                         | scenarios](https://predictiveecology.org/training/_book/LandRDemo_coreVeg#turn-plotting-on-after-setting-up-the-workflow)|
+| 11:00 - 11:30           | [Forest carbon ](https://predictiveecology.org/training/_book/spadesCBMDemo.html)                                        |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
-| 11:30 - 12:30           | WOYO                                                                                                                     |
+|                         | [Download presentation](Presentations/2024-06-11/ForestCarbon.pdf)                                                       |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| 11:30 - 12:00           | WOYO and Discussion                                                                                                      |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
 | 12:30 - 1:30            | LUNCH BREAK                                                                                                              |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
-| 1:30 - 2:00             | [Forest carbon ](https://predictiveecology.org/training/_book/spadesCBMDemo.html)                                       |
+| 1:30 - 2:00             | WOYO and Discussion                                                                                                      |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
-|                         | [Download presentation](Presentations/2024-06-11/ForestCarbon.pdf)                                                  |
+| 2:00 - 2:30             | [Forests and wildfire](https://predictiveecology.org/training/_book/ForestsAndFire.html)                                 |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
-| 2:00 - 2:30             | WOYO                                                                                                                     |
+| 2:30 - 3:00             | WOYO and Discussion and Break                                                                                                     |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
-| 2:30 - 3:00             | [Forests and wildfire](https://predictiveecology.org/training/_book/ForestsAndFire.html)                                 |
+| 3:00 - 4:30             | Forest Degradation Discussion and Brainstorming                                                                          |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
-| 3:00 - 4:00             | WOYO                                                                                                                     |
+|                         | How do we estimate baselines? What is Natural Range of Variation and how does SpaDES help us?                            |
 +-------------------------+--------------------------------------------------------------------------------------------------------------------------+
